# Ivy

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile
Dependencies/: CMakeLists.txt
Dependencies/FreeType/: CMakeLists.txt
Dependencies/Unity/: CMakeLists.txt
Dependencies/cgltf/: CMakeLists.txt
Dependencies/cimgui/: CMakeLists.txt
Dependencies/stb/: CMakeLists.txt
GLSL/: CMakeLists.txt  basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
Source/: CMakeLists.txt  IvyApplication.c  IvyApplication.h  IvyArenaMemoryAllocator.c  IvyArenaMemoryAllocator.h  IvyCocoaApplication.h  IvyCocoaApplication.m  IvyDeclarations.h  IvyDraw.c  IvyDraw.h  IvyDummyGraphicsMemoryAllocator.c  IvyDummyGraphicsMemoryAllocator.h  IvyDummyMemoryAllocator.c  IvyDummyMemoryAllocator.h  IvyGLFWApplication.c  IvyGLFWApplication.h  IvyGraphicsAttachment.c  IvyGraphicsAttachment.h  IvyGraphicsContext.c  IvyGraphicsContext.h  IvyGraphicsDataUploader.c  IvyGraphicsDataUploader.h  IvyGraphicsIndexBuffer.c  IvyGraphicsIndexBuffer.h  IvyGraphicsMemoryAllocator.c  IvyGraphicsMemoryAllocator.h  IvyGraphicsMemoryChunk.c  IvyGraphicsMemoryChunk.h  IvyGraphicsProgram.c  IvyGraphicsProgram.h  IvyGraphicsSkybox.h  IvyGraphicsTemporaryBuffer.c  IvyGraphicsTemporaryBuffer.h  IvyGraphicsTexture.c  IvyGraphicsTexture.h  IvyGraphicsVertexBuffer.c  IvyGraphicsVertexBuffer.h  IvyImGui.c  IvyImGui.h  IvyLog.c  (+14 more)
Tests/: CMakeLists.txt  IvyTestArenaMemoryAllocator.c  IvyTestVectorMath.c
src/: CMakeLists.txt  IvyApplication.h  IvyDeclarations.h  IvyDummyGraphicsMemoryAllocator.c  IvyGraphicsAttachment.c  IvyGraphicsAttachment.h  IvyGraphicsContext.c  IvyGraphicsContext.h  IvyGraphicsDataUploader.c  IvyGraphicsDataUploader.h  IvyGraphicsMemoryAllocator.c  IvyGraphicsMemoryAllocator.h  IvyGraphicsProgram.h  IvyRenderer.c  IvyRenderer.h
